--- a/app.css
+++ b/app.css
@@ -1315,8 +1315,8 @@ footer hr {
     width: 90%;
     overflow-x: auto;
     overflow-y: hidden;
-    border-left: solid 1px rgba(255, 255, 255, 1);
-    border-right: solid 1px rgba(255, 255, 255, 1);
+    border-left: solid 1px transparent;
+    border-right: solid 1px transparent;
     /* border-radius: 5px 5px 0 0; */
     scrollbar-width: none;
     align-items: flex-end;
@@ -1340,8 +1340,8 @@ footer hr {
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: none;
-    border-top: solid 1px rgba(255, 255, 255, 1);
-    border-bottom: solid 1px rgba(255, 255, 255, 1);
+    border-top: solid 1px transparent;
+    border-bottom: solid 1px transparent;
     border-radius: 5px 0 0 5px;
 }
 
